--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -15,10 +15,10 @@ html, body {
     height: 100%;
     background-color: #FFFFFF;
     font-family: 'Lato', sans-serif;
+    // font-family: 'Roboto Slab', serif;
     font-style: normal;
     font-size: 14px;
     line-height: 20px;
-    // font-family: 'Inter', sans-serif;
     color: #000000;
 }
 
