Тестирование грид сетки, подтягивание статики, расстановка твоаров

--- a/src/scss/components/_newArrival.scss
+++ b/src/scss/components/_newArrival.scss
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     .title {
-        width: 100%;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -20,6 +19,15 @@
         }
     }
     .newProducts {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-around;
         margin: 0 104px 70px 104px;
+        .card {
+            width: 263px;
+            height: 370px;
+        }
     }
 }
